tests/fail/recursive_array.tig
let
    type a = array of a
in
end
