tests/fail/recursive_array.err
Semantic Error: Invalid recursive definition of the array a at line 2.
